// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 38px;
  height: 38px;
  border-width: 2px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
}

@media (min-width:360px) {
  .c0 {
    width: 43px;
    height: 43px;
  }
}

@media (min-width:1140px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

<button
  className="c0"
/>
`;

exports[`IsVotedButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 38px;
  height: 38px;
  border-width: 2px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  color: rgb(255,255,255);
}

.c0 path.tofill {
  fill: rgb(255,255,255);
}

@media (min-width:360px) {
  .c0 {
    width: 43px;
    height: 43px;
  }
}

@media (min-width:1140px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

<button
  className="sc-1gs43wt-0 c0"
/>
`;

exports[`VoteButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 38px;
  height: 38px;
  border-width: 2px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  background-color: rgb(255,255,255);
}

.c0:focus,
.c0:active {
  color: rgb(255,255,255);
}

.c0:focus path.tofill,
.c0:active path.tofill {
  fill: rgb(255,255,255);
}

@media (min-width:360px) {
  .c0 {
    width: 43px;
    height: 43px;
  }
}

@media (min-width:1140px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

<button
  className="sc-1gs43wt-0 c0"
/>
`;
